<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iBeatCon for Android</string>
    <string name="action_reconnect">Reconnect</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_info">Info</string>
    <string name="action_help">Manual</string>
    <string name="str_firstrun">[FIRST RUN] Please setup Your iBeatCon, Press \"?\" icon to check the manual.</string>
    <string name="title_connfail">Cannot connect into iBeatCon server.</string>
    <string name="content_connfail">Please check your network or server status.</string>
    <string name="pref_network">Network</string>
    <string name="pref_skin">Skin</string>
    <string name="pref_misc">Misc</string>
    <string name="str_ip">Server IP Address</string>
    <string name="str_modesel">Mode Select</string>
    <string name="str_default">Default</string>
    <string name="str_2p">2P mode</string>
    <string name="str_ko">Key only mode</string>
    <string name="str_so">Turntable only mode</string>
    <string name="str_bp">Black panel mode</string>
    <string name="str_ns">New server compatible mode</string>
    <string name="str_bk">Blue upper button</string>
    <string name="str_ts">Touch Turntable</string>
    <string name="str_fb">Haptic Feedback</string>
    <string name="str_hw">Hardware Acceleration</string>
    <string name="str_ip_input">Input Your Server IP</string>
    <string name="str_ip_desc">Please input your server IP address</string>
    <string name="str_ns_desc">Use port 10070 instead of 2001</string>
    <string name="str_modesel_desc">Choose your controller style</string>
    <string name="str_zoom_desc">Change controller size</string>
    <string name="str_bp_desc">Change background color to Gray</string>
    <string name="str_bk_desc">Change upper button color to Blue</string>
    <string name="str_ts_desc">Change turntable to touchable</string>
    <string name="str_fb_desc">Vibrate when you pressing key on controller</string>
    <string name="str_hw_desc">Hardware acceleration for performance</string>
    <string name="str_zoom">Zoom</string>
    <string name="str_reset">Reset</string>
    <string name="str_reset_msg">Defaults Restored</string>
    <string name="str_apply_msg">Settings saved \n You must restart iBeatCon for Android for this change to take effect.</string>
    <string name="str_error_msg">[ERROR] Something has gone wrong, Please restart the application.</string>
    <string name="int_zoom">100</string>
    <string name="desc_logo">Logo of iBeatCon</string>
    <string name="str_dev">Developer</string>
    <string name="str_developer">kuna (lazykuna)</string>
    <string name="str_maintain">Maintainer</string>
    <string name="str_modifier">xuserv (xuserv)</string>
    <string name="str_original">Original iBeatCon Developer</string>
    <string name="str_origdev">Harunene (Harunene)</string>

</resources>